--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 
                     </ul>
 
-                    <p class="legal">© RiversideREPO</p>
+                    <p class="legal">© RiversideREOP</p>
 
                     
 
@@ -838,7 +838,7 @@
 
                <a href="#body"><img src="footer-go-up.svg" alt="Go up"></a> 
 
-               <p class="legal">© RIVERSIDERepo</p>
+               <p class="legal">© RIVERSIDE REOP</p>
 
                <br>
 
