--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	
 
-    <title>RiversideREPO</title>
+    <title>RiversideREOP</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
