--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
                     <h1>RIVERSIDE</h1>
 
-                    <!--
 
-                    <img src="https://raw.githubusercontent.com/ViktoriiaZaichuk/portfolio-FCC/908ed17542cb427db1eea42b219b446dbb7801c8/assets/img/vika.svg" alt="Name" height="50">
+                    <img src="reop.png" alt="Name" height="60" width="60">
 
-                    -->
+
+                    
 
                 </div>
 
