--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon-vz@4x-min.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon-vz@4x-min.webp">
 
 	
 
@@ -131,7 +131,7 @@
                     <h1>RIVERSIDE</h1>
 
 
-                    <img src="reop-min.png" alt="Name" height="60" width="60">
+                    <img src="reop-min.webp" alt="Name" height="60" width="60">
 
 
                     
@@ -268,7 +268,7 @@
 
                         <a href="">
 
-                            <img class="work01-img" src="work1-min.jpeg" alt="Black and white building">
+                            <img class="work01-img" src="work1-min.webp" alt="Black and white building">
 
                         </a>
 
@@ -310,7 +310,7 @@
 
                         <a href="">
 
-                            <img class="work02-img" src="work2-min.jpg" alt="Benjamin Franklin">
+                            <img class="work02-img" src="work2-min.webp" alt="Benjamin Franklin">
 
                         </a>
 
@@ -330,7 +330,7 @@
 
                         <a href="">
 
-                            <img class="work03-img" src="work3-min.jpg" alt="House on a snowy day">
+                            <img class="work03-img" src="work3-min.webp" alt="House on a snowy day">
 
                         </a>
 
@@ -374,7 +374,7 @@
 
                         <a href="">
 
-                            <img class="work02-img" src="work4-min.jpg" alt="Family holding hands">
+                            <img class="work02-img" src="work4-min.webp" alt="Family holding hands">
 
                         </a>
 
