--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
     <title>RiversideREOP</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
 
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js?ver=5.8.3' id='gsap-js-js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js?ver=5.8.3' id='gsap-js-js' defer></script>
 
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js?ver=5.8.3' id='gsap-js2-js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js?ver=5.8.3' id='gsap-js2-js' defer></script>
 
 </head>
 
