--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/icon-vz@4x-min.webp">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon-vz@4x-min.webp">
 
 	
 
@@ -57,7 +57,7 @@
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js?ver=5.8.3' id='gsap-js-js' defer></script>
 
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js?ver=5.8.3' id='gsap-js2-js' defer></script>
-
+ <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -178,7 +178,7 @@
 
                 <h4 class="about-web">
 
-                  <br>
+    
 
                   
 
